--- a/random-quotes/index.html
+++ b/random-quotes/index.html
@@ -27,7 +27,7 @@
 
 
 
-                    <div class="buttons">
+                    <div class="buttons mb-10">
 
                         <a class="button p-4" id="tweet-quote" title="Tweet it!" target="_top">
                             <i class="fa fa-twitter fa-2x pr-2 text-cyan-600"></i>
