--- a/random-quotes/index.html
+++ b/random-quotes/index.html
@@ -1,14 +1,23 @@
+<!DOCTYPE html>
+<html lang="en">
 
 <head>
+
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Quote machine</title>
+
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css"/><!--font awesome-->
 
     <script src="https://cdn.tailwindcss.com"></script> <!--Tailwind CSS CDN-->
 
     <link rel="stylesheet" href="styles.css">
+
 </head>
 
 <body>
-<div id="wrapper" class="mx-auto w-3/4 md:w-6/12 mt-24">
+<div id="wrapper" class="mx-auto w-4/5 md:w-6/12 mt-24">
   <div id="quote-box" class="text-center border-2 rounded-md">
 
                     <div class="quote-text pt-10">
@@ -49,3 +58,5 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
 
 <script type="text/javascript" src="script.js"></script>
+
+</html>
