--- a/random-quotes/index.html
+++ b/random-quotes/index.html
@@ -20,7 +20,7 @@
 <div id="wrapper" class="mx-auto w-4/5 md:w-6/12 mt-24">
   <div id="quote-box" class="text-center border-2 rounded-md">
 
-                    <div class="quote-text pt-10">
+                    <div class="quote-text pt-10 px-4 md:px-8">
 
                         <span id="text"></span>
 
