--- a/random-quotes/index.html
+++ b/random-quotes/index.html
@@ -39,7 +39,7 @@
                     <div class="buttons mb-10">
 
                         <a class="button p-4" id="tweet-quote" title="Tweet it!" target="_top">
-                            <i class="fa fa-twitter fa-2x pr-2 text-cyan-600"></i>
+                            <i class="fa fa-twitter fa-2x pr-2 text-cyan-600 hover:text-cyan-500"></i>
                         </a>
 
 
@@ -50,7 +50,7 @@
 
     </div><!--quote-box-->
   
-                    <div class="footer text-right mt-4 text-sm">by <a href="https://github.com/samouchka1" target="_blank" class="text-cyan-600">samouchka</a></div>
+                    <div class="footer text-right mt-4 text-sm">by <a href="https://github.com/samouchka1" target="_blank" class="text-cyan-600 hover:text-cyan-500">samouchka</a></div>
 
 </div>
 </body>
